[gd_scene load_steps=48 format=2]

[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=3]
[ext_resource path="res://gui_modules/Exploration/Scripts/ExplorationModule.gd" type="Script" id=7]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=19]
[ext_resource path="res://assets/Textures_v2/back_charinfo.png" type="Texture" id=28]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButton_with_Font.tres" type="Theme" id=42]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion.png" type="Texture" id=43]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon_hover.png" type="Texture" id=44]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor_pressed.png" type="Texture" id=45]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor.png" type="Texture" id=46]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion_pressed.png" type="Texture" id=47]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft_pressed.png" type="Texture" id=48]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon.png" type="Texture" id=49]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm_pressed.png" type="Texture" id=50]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food_hover.png" type="Texture" id=51]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_hover.png" type="Texture" id=52]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm_hover.png" type="Texture" id=53]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food_pressed.png" type="Texture" id=54]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion_hover.png" type="Texture" id=55]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor_hover.png" type="Texture" id=56]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft_hover.png" type="Texture" id=57]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources_pressed.png" type="Texture" id=58]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon_pressed.png" type="Texture" id=59]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft.png" type="Texture" id=60]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources.png" type="Texture" id=61]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food.png" type="Texture" id=62]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm.png" type="Texture" id=63]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources_hover.png" type="Texture" id=64]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_pressed.png" type="Texture" id=65]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all.png" type="Texture" id=66]
[ext_resource path="res://assets/Textures_v2/CITY/Panels/panel_marketplace.png" type="Texture" id=67]
[ext_resource path="res://assets/Themes_v2/EXPLORATION/MarketButtons.tres" type="Theme" id=68]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/scrollbar_horizontal_detail.png" type="Texture" id=69]
[ext_resource path="res://assets/Textures_v2/Universal/Panels/panel_square.png" type="Texture" id=70]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/HSliderBG.tres" type="StyleBox" id=72]
[ext_resource path="res://src/scenes/NumberSelection.gd" type="Script" id=73]
[ext_resource path="res://gui_modules/Exploration/Modules/LocationGui.tscn" type="PackedScene" id=98]
[ext_resource path="res://gui_modules/Mansion/Modules/MansionJournalModule.tscn" type="PackedScene" id=100]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/icon_journalcity.png" type="Texture" id=101]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/icon_journalcity_pressed.png" type="Texture" id=102]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/icon_journalcity_hover.png" type="Texture" id=103]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=112]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle.tres" type="DynamicFont" id=119]

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 70 )
region_rect = Rect2( 0, 0, 128, 55 )
margin_left = 12.0
margin_right = 12.0
margin_top = 12.0
margin_bottom = 12.0

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="ExplorationModule" type="Control"]
self_modulate = Color( 1, 1, 1, 0.74902 )
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 1 )
script = ExtResource( 7 )

[node name="LocationGui" parent="." instance=ExtResource( 98 )]

[node name="AreaShop" type="Panel" parent="." groups=["pauseprocess"]]
visible = false
margin_left = 398.0
margin_top = 137.0
margin_right = 1521.0
margin_bottom = 1062.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="AreaShop"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_right = 1123.0
margin_bottom = 83.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="Panel" parent="AreaShop"]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_top = 83.0
margin_right = 1123.0
margin_bottom = 925.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AreaShop"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 67 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AreaShop"]
margin_right = 1123.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 119 )
text = "MARKETPLACE_LABEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellFilter" type="HBoxContainer" parent="AreaShop"]
margin_left = 53.97
margin_top = 141.765
margin_right = 513.97
margin_bottom = 195.765
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="TextureButton" parent="AreaShop/SellFilter"]
margin_right = 54.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYALL"
toggle_mode = true
texture_normal = ExtResource( 66 )
texture_pressed = ExtResource( 65 )
texture_hover = ExtResource( 52 )

[node name="food" type="TextureButton" parent="AreaShop/SellFilter"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 62 )
texture_pressed = ExtResource( 54 )
texture_hover = ExtResource( 51 )

[node name="usable" type="TextureButton" parent="AreaShop/SellFilter"]
margin_left = 116.0
margin_right = 170.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYUSE"
toggle_mode = true
texture_normal = ExtResource( 43 )
texture_pressed = ExtResource( 47 )
texture_hover = ExtResource( 55 )

[node name="material" type="TextureButton" parent="AreaShop/SellFilter"]
margin_left = 174.0
margin_right = 228.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 61 )
texture_pressed = ExtResource( 58 )
texture_hover = ExtResource( 64 )

[node name="tool" type="TextureButton" parent="AreaShop/SellFilter"]
margin_left = 232.0
margin_right = 286.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYTOOL"
toggle_mode = true
texture_normal = ExtResource( 60 )
texture_pressed = ExtResource( 48 )
texture_hover = ExtResource( 57 )

[node name="weapon" type="TextureButton" parent="AreaShop/SellFilter"]
margin_left = 290.0
margin_right = 344.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYWEAPON"
toggle_mode = true
texture_normal = ExtResource( 49 )
texture_pressed = ExtResource( 59 )
texture_hover = ExtResource( 44 )

[node name="armor" type="TextureButton" parent="AreaShop/SellFilter"]
margin_left = 348.0
margin_right = 402.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYARMOR"
toggle_mode = true
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 56 )

[node name="costume" type="TextureButton" parent="AreaShop/SellFilter"]
margin_left = 406.0
margin_right = 460.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYCOSTUME"
toggle_mode = true
texture_normal = ExtResource( 63 )
texture_pressed = ExtResource( 50 )
texture_hover = ExtResource( 53 )

[node name="BuyFilter" type="HBoxContainer" parent="AreaShop"]
margin_left = 602.043
margin_top = 141.765
margin_right = 1062.04
margin_bottom = 195.765
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_right = 54.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYALL"
toggle_mode = true
texture_normal = ExtResource( 66 )
texture_pressed = ExtResource( 65 )
texture_hover = ExtResource( 52 )

[node name="food" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 62 )
texture_pressed = ExtResource( 54 )
texture_hover = ExtResource( 51 )

[node name="usable" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_left = 116.0
margin_right = 170.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYUSE"
toggle_mode = true
texture_normal = ExtResource( 43 )
texture_pressed = ExtResource( 47 )
texture_hover = ExtResource( 55 )

[node name="material" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_left = 174.0
margin_right = 228.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 61 )
texture_pressed = ExtResource( 58 )
texture_hover = ExtResource( 64 )

[node name="tool" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_left = 232.0
margin_right = 286.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYTOOL"
toggle_mode = true
texture_normal = ExtResource( 60 )
texture_pressed = ExtResource( 48 )
texture_hover = ExtResource( 57 )

[node name="weapon" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_left = 290.0
margin_right = 344.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYWEAPON"
toggle_mode = true
texture_normal = ExtResource( 49 )
texture_pressed = ExtResource( 59 )
texture_hover = ExtResource( 44 )

[node name="armor" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_left = 348.0
margin_right = 402.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYARMOR"
toggle_mode = true
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 56 )

[node name="costume" type="TextureButton" parent="AreaShop/BuyFilter"]
margin_left = 406.0
margin_right = 460.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYCOSTUME"
toggle_mode = true
texture_normal = ExtResource( 63 )
texture_pressed = ExtResource( 50 )
texture_hover = ExtResource( 53 )

[node name="SellBlock" type="Control" parent="AreaShop"]
margin_top = 104.765
margin_right = 40.0
margin_bottom = 144.765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AreaShop/SellBlock"]
margin_left = 68.0
margin_top = 150.0
margin_right = 548.0
margin_bottom = 600.0
rect_min_size = Vector2( 480, 0 )
theme = ExtResource( 19 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AreaShop/SellBlock/ScrollContainer"]
margin_right = 480.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="AreaShop/SellBlock/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 480.0
margin_bottom = 50.0
rect_min_size = Vector2( 464, 50 )
theme = ExtResource( 68 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = true

[node name="icon" type="TextureRect" parent="AreaShop/SellBlock/ScrollContainer/VBoxContainer/Button"]
margin_left = 6.0
margin_top = 6.0
margin_right = 47.0
margin_bottom = 45.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="AreaShop/SellBlock/ScrollContainer/VBoxContainer/Button"]
margin_left = 69.0
margin_top = 6.0
margin_right = 279.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Test"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="price" type="Label" parent="AreaShop/SellBlock/ScrollContainer/VBoxContainer/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -18.7131
margin_right = -11.0
margin_bottom = 16.2869
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "10"
align = 2

[node name="amount" type="Label" parent="AreaShop/SellBlock/ScrollContainer/VBoxContainer/Button"]
margin_left = 340.97
margin_top = 6.0
margin_right = 388.97
margin_bottom = 41.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "1"
align = 2

[node name="Label" type="Label" parent="AreaShop/SellBlock"]
margin_left = 498.337
margin_top = 108.88
margin_right = 551.337
margin_bottom = 140.88
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "COST_LABEL"

[node name="Label2" type="Label" parent="AreaShop/SellBlock"]
margin_left = 387.443
margin_top = 108.88
margin_right = 480.443
margin_bottom = 140.88
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "NUMBER_LABEL"

[node name="Label3" type="Label" parent="AreaShop/SellBlock"]
margin_left = 113.97
margin_top = 108.88
margin_right = 206.97
margin_bottom = 140.88
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "ITEM_LABEL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyBlock" type="Control" parent="AreaShop"]
margin_left = 521.97
margin_top = 104.765
margin_right = 561.97
margin_bottom = 144.765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AreaShop/BuyBlock"]
margin_left = 56.0
margin_top = 150.0
margin_right = 536.0
margin_bottom = 600.0
theme = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AreaShop/BuyBlock/ScrollContainer"]
margin_right = 480.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="AreaShop/BuyBlock/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 480.0
margin_bottom = 50.0
rect_min_size = Vector2( 464, 50 )
theme = ExtResource( 68 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true

[node name="icon" type="TextureRect" parent="AreaShop/BuyBlock/ScrollContainer/VBoxContainer/Button"]
margin_left = 6.0
margin_top = 6.0
margin_right = 47.0
margin_bottom = 45.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="AreaShop/BuyBlock/ScrollContainer/VBoxContainer/Button"]
margin_left = 69.0
margin_top = 5.0
margin_right = 279.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Test"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="price" type="Label" parent="AreaShop/BuyBlock/ScrollContainer/VBoxContainer/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -19.7131
margin_right = -11.0
margin_bottom = 15.2869
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "10"
align = 2

[node name="amount" type="Label" parent="AreaShop/BuyBlock/ScrollContainer/VBoxContainer/Button"]
margin_left = 340.97
margin_top = 5.0
margin_right = 388.97
margin_bottom = 40.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "1"
align = 2

[node name="Label" type="Label" parent="AreaShop/BuyBlock"]
margin_left = 477.337
margin_top = 108.88
margin_right = 530.337
margin_bottom = 140.88
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "COST_LABEL"

[node name="Label2" type="Label" parent="AreaShop/BuyBlock"]
margin_left = 366.443
margin_top = 108.88
margin_right = 459.443
margin_bottom = 140.88
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "NUMBER_LABEL"

[node name="Label3" type="Label" parent="AreaShop/BuyBlock"]
margin_left = 88.97
margin_top = 108.88
margin_right = 181.97
margin_bottom = 140.88
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "ITEM_LABEL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberSelection" type="Panel" parent="AreaShop"]
visible = false
margin_left = 294.0
margin_top = 724.0
margin_right = 794.0
margin_bottom = 914.0
custom_styles/panel = SubResource( 15 )
script = ExtResource( 73 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AreaShop/NumberSelection"]
self_modulate = Color( 0, 0, 0, 0.686275 )
show_behind_parent = true
margin_right = 500.0
margin_bottom = 190.0
custom_styles/panel = SubResource( 16 )

[node name="HSlider" type="HSlider" parent="AreaShop/NumberSelection"]
margin_left = 37.0
margin_top = 95.0
margin_right = 567.0
margin_bottom = 121.0
rect_scale = Vector2( 0.8, 0.8 )
custom_icons/grabber_disabled = ExtResource( 69 )
custom_icons/grabber_highlight = ExtResource( 69 )
custom_icons/grabber = ExtResource( 69 )
custom_styles/slider = ExtResource( 72 )
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="AreaShop/NumberSelection"]
margin_left = 125.443
margin_top = 122.8
margin_right = 379.443
margin_bottom = 174.8
theme = ExtResource( 42 )
custom_fonts/font = ExtResource( 8 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MAX" type="Button" parent="AreaShop/NumberSelection"]
margin_left = 38.1663
margin_top = 122.8
margin_right = 103.166
margin_bottom = 177.8
theme = ExtResource( 42 )
custom_fonts/font = ExtResource( 8 )
text = "Max"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="AreaShop/NumberSelection"]
margin_top = 10.0
margin_right = 500.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 8 )
text = "Item Name"
align = 1
valign = 1

[node name="ItemAmount" type="Label" parent="AreaShop/NumberSelection"]
margin_left = 79.0
margin_top = 53.0
margin_right = 121.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 8 )
text = "x 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPrice" type="Label" parent="AreaShop/NumberSelection"]
margin_left = 384.962
margin_top = 53.459
margin_right = 464.962
margin_bottom = 88.459
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 8 )
text = "x Price"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="AreaShop/NumberSelection"]
margin_left = 37.0
margin_top = 50.0
margin_right = 77.0
margin_bottom = 90.0
texture = ExtResource( 112 )
expand = true
stretch_mode = 6

[node name="Gold" type="TextureRect" parent="AreaShop/NumberSelection"]
margin_left = 348.0
margin_top = 50.0
margin_right = 388.0
margin_bottom = 90.0
texture = ExtResource( 112 )
expand = true
stretch_mode = 6

[node name="Label4" type="Label" parent="AreaShop"]
margin_left = 62.0
margin_top = 83.765
margin_right = 520.0
margin_bottom = 142.765
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 119 )
text = "LMMINVENTORY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="AreaShop"]
margin_left = 610.043
margin_top = 83.765
margin_right = 1068.04
margin_bottom = 142.765
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 119 )
text = "TRADER_LABEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JournalButton" type="TextureButton" parent="."]
margin_left = 1848.73
margin_top = 16.8675
margin_right = 1902.73
margin_bottom = 67.8674
texture_normal = ExtResource( 101 )
texture_pressed = ExtResource( 102 )
texture_hover = ExtResource( 103 )

[node name="MansionJournalModule" parent="." instance=ExtResource( 100 )]
visible = false
margin_left = 530.0
margin_top = 177.0
margin_right = 1390.0
margin_bottom = 977.0

[node name="TestButton" type="Button" parent="."]
visible = false
margin_left = 1821.4
margin_top = 991.439
margin_right = 1880.24
margin_bottom = 1037.69
text = "Test"
